--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
     display: flex;
     width: 560px;
     height: 680px;
+    max-width: 100%;
+    height: auto;
     justify-content: center;
 }
 body{
