--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@ header{
 }
 .tmenu{
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
     margin-bottom: 19px;
 }
@@ -49,7 +51,9 @@ h1{
     padding-left: 10px;
 }
 .vitrine img {
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
     margin: 22px;
     width: 180px;
