--- a/style.css
+++ b/style.css
@@ -55,9 +55,11 @@ h1{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 22px;
+    margin-left: 45%;
+    margin: auto;
     width: 180px;
     height: 189px;
+    
     
   
 }
