--- a/style.css
+++ b/style.css
@@ -50,18 +50,25 @@ h1{
     margin-top: 0px;
     padding-left: 10px;
 }
-.vitrine img {
+.vitrine{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    
+}
+.vitrine1 img{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-left: 45%;
-    margin: auto;
-    width: 180px;
-    height: 189px;
-    
-    
-  
+    width: 200px;
+    height: 195px;
+
+}
+.vitrine2 img{
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    height: 195px;
+
 }
 .decor1{
     display: flex;
@@ -102,6 +109,5 @@ h1{
 .order:hover{
     background-color: chocolate;
     border-radius: 20px;
-    
-    
+      
 }
