--- a/style.css
+++ b/style.css
@@ -111,3 +111,21 @@ h1{
     border-radius: 20px;
       
 }
+.about{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 29px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+    
+}
+
+.tabout{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: solid 2px orange;
+    margin: 10px;
+}
