--- a/style.css
+++ b/style.css
@@ -127,5 +127,6 @@ h1{
     justify-content: center;
     align-items: center;
     border: solid 2px orange;
+    border-radius: 20px;
     margin: 10px;
 }
