--- a/style.css
+++ b/style.css
@@ -4,6 +4,49 @@
     
 }
 
+.loader{
+
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #663109; /* Fond noir */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+    animation: fadeOut 3s ease-in-out forwards; /* Animation pour disparaître */
+
+}
+
+.loader img {
+
+    width: 150px;
+    animation: zoomOut 5s ease-in-out ;
+}
+/* --- Animation pour agrandir et réduire le logo --- */
+@keyframes zoomOut {
+    0% { transform: scale(1); opacity: 1; }
+    50% { transform: scale(1.5); opacity: 0.8; }
+    100% { transform: scale(1); opacity: 1; }
+}
+
+/* --- Animation pour masquer le loader --- */
+@keyframes fadeOut {
+    0% { opacity: 1; }
+    100% { opacity: 0; visibility: hidden; }
+}
+
+/* --- Masquer le contenu pendant le chargement --- */
+.content {
+    display: none;
+}
+
+/* --- Afficher le contenu après la disparition du loader --- */
+body.loaded .content {
+    display: block;
+}
+
+
 .menu{
     display: flex;
     width: 560px;
